refactor(powerline): 优化电力线路插件代码结构
- 移除未使用的导入包包括 Map 和 ArrayList
- 移除未使用的常量定义 REJECT_CURVE_KEY 和 REJECT_CLOSED_LOOP_KEY
- 简化 PowerLineSagPolicy 中的最大弧垂深度计算逻辑
- 移除 PowerLineWireRasterizer 中的冗余方法 rasterizeBlockLine3D
- 移除 PowerPoleLayoutUtils 中未使用的方法 deflectionAtSite
- 更新 TowerStructureGenerator 中的集合访问方式使用 getFirst 和 getLast 方法